--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -5,7 +5,7 @@
     <!--< %= link_to "⇦先月 ", client_path(date: @first_day.prev_month), class: "btn btn-info" %>-->
         
     <!--< %= link_to " 翌月⇨", client_path(date: @first_day.next_month), class: "btn btn-info" %>-->
-    <%= link_to "利用者情報報告書新規作成", monitoring_basic_info_client_monitorings_path(@client) %>
+    <%= link_to "利用者情報報告書新規作成", monitoring_basic_info_client_monitorings_path(@client), class: "btn btn-info" %>
     <thead>
     <tr>
       <th>利用者情報報告書</th>
@@ -17,7 +17,8 @@
     <tbody>
       <% @monitorings.each do |monitoring| %>
       <tr>
-        <td><%= link_to monitoring.monitoring_worked_on_year.strftime("%Y年")+monitoring.monitoring_worked_on_month.strftime("%m月"), monitoring_basic_info_affter_client_monitoring_path(@client) %>
+        <td><%= link_to monitoring.monitoring_worked_on_year.strftime("%Y年")+monitoring.monitoring_worked_on_month.strftime("%m月"), 
+             monitoring_basic_info_affter_client_monitoring_path(@client, monitoring), class: "btn btn-primary" %>
       <% end %>
         </td>
         <td></td>
