--- a/app/views/monitorings/monitoring_basic_info_affter.html.erb
+++ b/app/views/monitorings/monitoring_basic_info_affter.html.erb
@@ -41,44 +41,44 @@
         
         <!--歩行-->
         <br><%= f.label "［歩行］", class: "label-#{yield(:class_text)}" %>
-        <br><%= f.radio_button :monitoring_walking, :自立, checked: "checked" %>
+        <br><%= f.radio_button :monitoring_walking, :自立 %>
       <%= f.label "自立", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button :monitoring_walking, :見守り, checked: "checked" %>
+      <%= f.radio_button :monitoring_walking, :見守り %>
       <%= f.label "見守り", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button :monitoring_walking, :一部介助, checked: "checked" %>
+      <%= f.radio_button :monitoring_walking, :一部介助 %>
       <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button :monitoring_walking, :介助, checked: "checked" %>
+      <%= f.radio_button :monitoring_walking, :介助 %>
       <%= f.label "介助", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button :monitoring_walking, :車いす, checked: "checked" %>
+      <%= f.radio_button :monitoring_walking, :車いす %>
       <%= f.label "車いす", class: "label-#{yield(:class_text)}" %>
          
          <!--食事-->
         <br><%= f.label "［食事］", class: "label-#{yield(:class_text)}" %>
-        <br><%= f.radio_button  :monitoring_eating, :自立, checked: "checked" %>
+        <br><%= f.radio_button  :monitoring_eating, :自立 %>
       <%= f.label "自立", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button  :monitoring_eating, :一部介助, checked: "checked" %>
+      <%= f.radio_button  :monitoring_eating, :一部介助 %>
       <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button  :monitoring_eating, :全介助, checked: "checked" %>
+      <%= f.radio_button  :monitoring_eating, :全介助 %>
       <%= f.label "全介助", class: "label-#{yield(:class_text)}" %>
         
         <!--参加状況-->
         <br><%= f.label "［参加状況］", class: "label-#{yield(:class_text)}" %>
-        <br><%= f.radio_button  :monitoring_situation_of_participation, :毎回実施, checked: "checked" %>
+        <br><%= f.radio_button  :monitoring_situation_of_participation, :毎回実施 %>
         <%= f.label "毎回実施", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button  :monitoring_situation_of_participation, :ほぼ毎回実施, checked: "checked" %>
+        <%= f.radio_button  :monitoring_situation_of_participation, :ほぼ毎回実施 %>
         <%= f.label "ほぼ毎回実施", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button  :monitoring_situation_of_participation, :時々実施, checked: "checked" %>
+        <%= f.radio_button  :monitoring_situation_of_participation, :時々実施 %>
         <%= f.label "時々実施", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button  :monitoring_situation_of_participation, :あまりしない, checked: "checked" %>
+        <%= f.radio_button  :monitoring_situation_of_participation, :あまりしない %>
         <%= f.label "あまりしない", class: "label-#{yield(:class_text)}" %>
         
         <!--入浴-->
         <br><%= f.label "［入浴］", class: "label-#{yield(:class_text)}" %>
-        <br><%= f.radio_button :monitoring_both, :自立, checked: "checked" %>
+        <br><%= f.radio_button :monitoring_both, :自立 %>
         <%= f.label "自立", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button :monitoring_both, :一部介助, checked: "checked" %>
+        <%= f.radio_button :monitoring_both, :一部介助 %>
         <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button :monitoring_both, :全介助, checked: "checked" %>
+        <%= f.radio_button :monitoring_both, :全介助 %>
         <%= f.label "全介助", class: "label-#{yield(:class_text)}" %>
         
         <br><%= f.label "皮膚トラブル" , class: "label-#{yield(:class_text)}" %>
@@ -86,20 +86,20 @@
         
         <!--更衣-->
          <br><%= f.label "［更衣］", class: "label-#{yield(:class_text)}" %>
-         <br><%= f.radio_button :monitoring_changing_clothes, :自立, checked: "checked" %>
+         <br><%= f.radio_button :monitoring_changing_clothes, :自立 %>
         <%= f.label "自立", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button :monitoring_changing_clothes, :一部介助, checked: "checked" %>
+        <%= f.radio_button :monitoring_changing_clothes, :一部介助 %>
         <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button :monitoring_changing_clothes, :全介助, checked: "checked" %>
+        <%= f.radio_button :monitoring_changing_clothes, :全介助 %>
         <%= f.label "全介助", class: "label-#{yield(:class_text)}" %>
         
         <!--社会参加-->
         <br><%= f.label"［社会参加］", class: "label-#{yield(:class_text)}" %>
-        <br><%= f.radio_button :monitoring_community, :参加している, checked: "checked" %>
+        <br><%= f.radio_button :monitoring_community, :参加している %>
         <%= f.label "参加している", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button :monitoring_community, :参加していない, checked: "checked" %>
+        <%= f.radio_button :monitoring_community, :参加していない %>
         <%= f.label "参加していない", class: "label-#{yield(:class_text)}" %>
-       <%= f.radio_button :monitoring_community, :実施なし, checked: "checked" %>
+       <%= f.radio_button :monitoring_community, :実施なし %>
         <%= f.label "実施なし", class: "label-#{yield(:class_text)}" %>
         
         <br><%= f.label "社会参加しているもの", class: "label-#{yield(:class_text)}" %>
@@ -107,9 +107,9 @@
         
         <!--利用状況-->
         <br><%= f.label "［利用状況］", class: "label-#{yield(:class_text)}" %>
-        <br><%= f.radio_button :monitoring_situation_dey, :休みなく利用, checked: "checked" %>
+        <br><%= f.radio_button :monitoring_situation_dey, :休みなく利用 %>
         <%= f.label "休みなく利用", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button :monitoring_situation_dey, :休んだ日がある, checked: "checked" %>
+        <%= f.radio_button :monitoring_situation_dey, :休んだ日がある %>
         <%= f.label "休んだ日がある", class: "label-#{yield(:class_text)}" %>
         <br><%= f.label "休んだ日がある理由" , class: "label-#{yield(:class_text)}" %>
         <br><%= f.text_area :monitoring_situation_dey, class: "hoge", size: "40x3" %>
@@ -128,16 +128,15 @@
         <td>
           <br><%= f.label "【サービス変更の必要性】", class: "label-#{yield(:class_text)}" %>
           
-          <br><%= f.radio_button :monitoring_service_need, :必要あり, checked: "checked" %>
+          <br><%= f.radio_button :monitoring_service_need, :必要あり %>
               <%= f.label "必要あり", class: "label-#{yield(:class_text)}" %>
-              <%= f.radio_button :monitoring_service_need, :必要なし, checked: "checked" %>
+              <%= f.radio_button :monitoring_service_need, :必要なし %>
               <%= f.label "必要なし", class: "label-#{yield(:class_text)}" %>
           <br><%= f.label "必要あり理由", class: "label-#{yield(:class_text)}" %>
               <br><%= f.text_area :monitoring_service_need, class: "hoge", size: "40x3" %>
           <br><%= f.label "確認", class: "label-#{yield(:class_text)}" %>
               <%= f.check_box :check_monitoring, {}, "true", "false" %>
-          <br><%= f.submit "編集", class: "btn btn-primary " ,
-          data: { confirm: "編集してもよろしいでしょうか？" } %>
+          <br><%= f.submit "編集", class: "btn btn-success " %>
         </td>
       <% end %>  
     </table>  
