--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -6,23 +6,21 @@
         
     <!--< %= link_to " 翌月⇨", client_path(date: @first_day.next_month), class: "btn btn-info" %>-->
     <%= link_to "利用者情報報告書新規作成", monitoring_basic_info_client_monitorings_path(@client), class: "btn btn-info" %>
+    <%= link_to "アセスメントシート新規作成", asesment_new_client_asesments_path(@client), class: "btn btn-info" %>
     <thead>
     <tr>
       <th>利用者情報報告書</th>
       <th>アセスメントシート</th>
-      <th>ADL(日常生活動作)</th>
-      <th>IADL(手段的日常動作)</th>
     </tr>
     </thead>
-    <tbody>
       <% @monitorings.each do |monitoring| %>
+    <tbody>
       <tr>
-        <td><%= link_to monitoring.monitoring_worked_on_year.strftime("%Y年")+monitoring.monitoring_worked_on_month.strftime("%m月"), 
+        <td>
+        <%= link_to monitoring.monitoring_worked_on_year.strftime("%Y年")+monitoring.monitoring_worked_on_month.strftime("%m月"), 
              monitoring_basic_info_affter_client_monitoring_path(@client, monitoring), class: "btn btn-primary" %>
       <% end %>
         </td>
-        <td></td>
-        <td></td>
         <td></td>
       </tr>
     </tbody>
