--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -4,7 +4,8 @@
   <table class="table table-bordered table-condensed table-hover" id="table-clientes">
     <thead>
       <tr>
-        <th>利用者情報編集</th>
+
+        <th>利用者情報変更</th>
         <th>利用者名</th>
         <th>連絡先</th>
         <th>介護度</th>
