--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -5,14 +5,14 @@
     <thead>
       <tr>
 
-        <th>利用者情報変更</th>
+        <th>利用者情報編集</th>
         <th>利用者名</th>
         <th>連絡先</th>
         <th>介護度</th>
         <th>利用日</th>
         <th>性別</th>
         <th>生年月日</th>
-        <th>モニタリング(利用者状況報告書)</th>
+        <th></th>
         <th>退所</th>
       </tr>
     </thead>
