--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -12,7 +12,7 @@
         <th>利用日</th>
         <th>性別</th>
         <th>生年月日</th>
-        <th></th>
+        <th>モニタリング</th>
         <th>退所</th>
       </tr>
     </thead>
