--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
           <li><%= link_to "利用者ー覧", clients_path %></li>
           <li><%= link_to "厨房提出食事確認欄" %></li>
           <li><%= link_to "看護日誌" %></li>
-          <li><%= link_to "業務日誌" %></li>
+          <li><%= link_to "本日の利用者の業務日誌" %></li>
           <li class="dropdown">
                <%= link_to "ログアウト", logout_path, method: :delete %>
               </li>
