--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -20,9 +20,9 @@
     <%= f.check_box :date_of_day, {multiple: true}, "日", nil %>日
   
   <br><%= f.label :性別, class: "label-#{yield(:class_text)}" %>
-  <br><%= f.radio_button :sex, :男性, checked: "checked" %>
+  <br><%= f.radio_button :sex, :男, checked: "checked" %>
         <%= f.label "男性", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button :sex, :女性, checked: "checked" %>
+        <%= f.radio_button :sex, :女, checked: "checked" %>
         <%= f.label "女性", class: "label-#{yield(:class_text)}" %>
   
   <br><%= f.label :生年月日, class: "label-#{yield(:class_text)}" %>
