--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -4,10 +4,10 @@
   <table class="table table-bordered table-condensed table-hover" id="table-clientes">
     <thead>
       <tr>
-
         <th>利用者情報編集</th>
         <th>利用者名</th>
-        <th>連絡先</th>
+        <th>電話番号</th>
+        <th>住所</th>
         <th>介護度</th>
         <th>利用日</th>
         <th>性別</th>
@@ -17,6 +17,7 @@
         <th>退所</th>
       </tr>
     </thead>
+
     
     <tbody>
       <% @clients.each do |client| %>
@@ -24,6 +25,7 @@
           <td><%= link_to "利用者情報編集", edit_basic_info_client_path(client) %></td>
           <td><%= client.client_name %>様</td>
           <td><%= client.telephone_number %></td>
+          <td><%= client.client_email %></td>
           <td><%= client.nursing_number %></td>
           <td><%= client.date_of_day %></td>
           <td><%= client.sex %></td>
