--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -4,8 +4,11 @@
   <%= f.label :利用者名, class: "label-#{yield(:class_text)}" %>
   <%= f.text_field :client_name, class: "form-control" %>
 
-  <%= f.label :連絡先, class: "label-#{yield(:class_text)}" %>
+  <%= f.label :電話番号, class: "label-#{yield(:class_text)}" %>
   <%= f.text_field :telephone_number, class: "form-control" %>
+
+  <%= f.label :住所, class: "label-#{yield(:class_text)}" %>
+  <%= f.text_field :client_email, class: "form-control" %>
 
   <%= f.label :介護度, class: "label-#{yield(:class_text)}" %>
   <%= f.select :nursing_number,[["要支援1", "要支援1"], ["要支援2", "要支援2"], ["要介護1", "要介護1"], ["要介護2", "要介護2"], ["要介護3", "要介護3"], ["要介護4", "要介護4"], ["要介護5", "要介護5"]], class: "form-control" %>
