--- a/app/views/monitorings/monitoring_basic_info_affter.html.erb
+++ b/app/views/monitorings/monitoring_basic_info_affter.html.erb
@@ -3,7 +3,7 @@
     <meta charset = " utf-8 " />
     
     <h1>利用者情報報告書</h1>
-    <%= form_with( model: @monitoring, url: update_monitoring_basic_info_affter_client_monitoring_path(@client), local: true, method: :patch) do |f| %>
+    <%= form_with( model: @monitoring, url: update_monitoring_basic_info_affter_client_monitoring_path(@client, @monitoring), local: true, method: :patch) do |f| %>
   <p><span class="under">利用者名: <%= @client.client_name %>様の
     <%= f.date_select(:monitoring_worked_on_year, discard_month:true) %>年
     <%= f.date_select(:monitoring_worked_on_month, discard_year:true, discard_day:true) %>
